--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link-http": "^1.5.9",
     "classnames": "^2.2.6",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "jsonwebtoken": "^8.4.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.8.0-alpha.0",
+    "react-apollo": "^2.3.3",
+    "react-dom": "^16.8.0-alpha.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
